k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bitrix
  labels:
    app.kubernetes.io/name: bitrix
